Remove hardcoding client id and secret into Swagger and instead ask users to input their own (so we don't get rogue api requests from people using swagger)
