# storage/api-docs/api-docs.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "title": "ATLauncher API",
-        "description": "This is the API for accessing data for ATLauncher.",
+        "description": "This is the API for accessing data for ATLauncher. Please note that any authenticated requests will list the scopes needed to access and will need an 'Authorization: Bearer\n                        {token}' heading. This token can be created by following the OAuth section below. Alternatively to test the API in Swagger with authorizaton needed, enter your client id\n                        and secret in the top box (optionally clicking save to remember those credentials on page refresh) so that you can use the on/off toggles beside calls needing authentication\n                        using your client id and client secretFor now there is no way to create new OAuth clients for use in your own applications, but this will be coming in the future.",
         "version": "1.0.0"
     },
     "basePath": "/",
@@ -61,6 +61,29 @@
                         ]
                     }
                 ]
+            }
+        },
+        "/oauth/scopes": {
+            "get": {
+                "tags": [
+                    "oauth"
+                ],
+                "summary": "Get the scopes available.",
+                "description": "Gets a listing of scopes available to get access from users.",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/OauthScopesResponse"
+                            }
+                        }
+                    }
+                }
             }
         },
         "/oauth/authorize": {
@@ -149,6 +172,21 @@
         }
     },
     "definitions": {
+        "OauthScopesResponse": {
+            "properties": {
+                "id": {
+                    "description": "The name of the scope.",
+                    "type": "string"
+                },
+                "description": {
+                    "description": "The description for the scope.",
+                    "type": "string"
+                }
+            },
+            "xml": {
+                "name": "OauthScopesResponse"
+            }
+        },
         "OauthTokenRequest": {
             "properties": {
                 "grant_type": {
